--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -203,6 +203,7 @@ ja:
       long: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       short: "%y/%m/%d %H:%M"
     pm: 午後
-    
-    
-    
+  view:
+    notifications:
+      true: "既読"
+      false: "未読"  
